# ArandaSoftTechnicalTest

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeSoci.txt.in  DownloadSoci.cmake
include/: LinuxSystemInformation.hpp  MacSystemInformation.hpp  SystemInformation.hpp  SystemInformationBase.hpp  SystemInformationFactory.hpp  SystemInformationInterface.hpp  WindowsSystemInformation.hpp
src/: CMakeLists.txt  LinuxSystemInformation.cpp  SystemInformation.cpp  SystemInformationBase.cpp  Task1.h  main.cpp
tests/: CMakeLists.txt  DatabaseTest.cpp  SystemInformationTest.cpp
